k8s/prod/workload/sports/base/deployment-stable.yml
---
apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: 'stable'
  labels:
    release: 'stable'
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      release: 'stable'
  template:
    metadata:
      labels:
        release: 'stable'
    spec:
      containers:
        - name: 'sports'
          image: 'gcr.io/test-25245-264913/sports@sha256:b91904691ea68c2583d6471daf63f2a1fdfeaf0a63e634bd835bb62cdc07168e'
          ports:
            - containerPort: 3001
