k8s/prod/workload/sports/base/service-nodeports.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sports-nodeport
spec:
  type: NodePort
  ports:
    - name: 'http-port'
      protocol: 'TCP'
      port: 8080
      targetPort: 3001
      nodePort: 30080
  selector:
    release: 'stable'
