k8s/prod/workload/sports/base/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: 34.120.113.68
    networking.gke.io/managed-certificates: sports-memory
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: default
          servicePort: 80
